# ols4

./: .dockerignore  .gitignore  AGENTS.md  README.md  checkstyle.xml  dataload.sh  docker-compose.yml  ebi_ontologies.json  pom.xml  test_api.sh  test_api_fast.sh  test_dataload.sh
.agent-sdlc/: config.yaml
.agent-sdlc/backlog-item/: SG-BLG-00001.md  SG-BLG-00002.md  SG-BLG-00003.md  SG-BLG-00004.md  SG-BLG-00005.md  SG-BLG-00006.md  SG-BLG-00007.md  SG-BLG-00008.md  SG-BLG-00009.md  SG-BLG-00010.md  SG-BLG-00011.md  SG-BLG-00012.md  SG-BLG-00013.md  SG-BLG-00014.md  SG-BLG-00015.md  SG-BLG-00016.md  SG-BLG-00017.md  SG-BLG-00018.md  SG-BLG-00019.md  SG-BLG-00020.md  SG-BLG-00021.md  SG-BLG-00022.md  SG-BLG-00023.md  SG-BLG-00024.md  SG-BLG-00025.md  SG-BLG-00026.md  SG-BLG-00027.md  SG-BLG-00028.md  SG-BLG-00029.md  SG-BLG-00030.md  (+18 more)
.github/: SECURITY_SCANNING.md  copilot-instructions.md  dependabot.yml
agent-dashboard/: package-lock.json  package.json
apitester4/: Dockerfile  pom.xml
backend/: Dockerfile  pom.xml
dataload/: Cargo.toml  Dockerfile  Dockerfile.nextflow  README.md  create_datafiles.sh  create_indexes.cypher  create_neo4j_indexes.py  create_neo4j_indexes.sh  dataload.dockersh  load_into_neo4j.sh  make_csv_import_cmd.sh  pom.xml  solr_import.py
dataload/configs/: pride.json
dataload/embeddings/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  codon_nextflow.config  config.json  download_model.sh  local_nextflow.config
dataload/embeddings/ols_add_embeddings_to_json/: Cargo.toml
dataload/embeddings/ols_add_embeddings_to_json/src/: main.rs
dataload/embeddings/ols_embed/: Cargo.toml  avg_embeddings.py  convert_umap_to_web.py  embed2.py  embed_openai.py  main.py  pca.py  pyproject.toml  server.py  visualize_embeddings.py
dataload/embeddings/ols_embed/src/: main.rs
dataload/embeddings/ols_inject_hierarchy/: Cargo.toml
dataload/embeddings/ols_inject_hierarchy/src/: main.rs
dataload/embeddings/ols_semsim/: Cargo.toml
dataload/embeddings/ols_semsim/src/: main.rs
dataload/embeddings/ols_to_tsv/src/: main.rs
dataload/embeddings/ols_top_k/: ols_top_k.py  pyproject.toml
dataload/extract_strings_from_terms/: Cargo.toml
dataload/extract_strings_from_terms/src/: main.rs
dataload/extras/: pom.xml
dataload/extras/json2sssom/: pom.xml
dataload/extras/json2sssom/src/main/java/: CurieMap.java  JSON2SSSOM.java
dataload/extras/orcid2level/: pom.xml
dataload/json2neo/: Cargo.toml
dataload/json2neo/src/: main.rs  manifest.rs  ontology_writer.rs
dataload/json2neo/src/main/java/: OntologyWriter.java
dataload/json2solr/: Cargo.toml
dataload/json2solr/src/: main.rs
dataload/json2solr/src/main/java/: JSON2Solr.java
dataload/linker/: README.md  pom.xml
dataload/linker/create_manifest/: Cargo.toml  README.md
dataload/linker/create_manifest/src/: linker_pass1.rs  main.rs  node_type.rs  ontology_scan_result.rs  ontology_scanner.rs
dataload/linker/link/: Cargo.toml  README.md
dataload/linker/link/src/: bioregistry.rs  copy_json_gathering_strings.rs  curie_map_result.rs  extract_iri_from_property_name.rs  leveldb.rs  linker_pass2.rs  main.rs  obo_database_url_service.rs  sssom_literal_mappings.rs
dataload/linker/src/main/java/: Embeddings.java  EntityDefinition.java  Linker.java  LinkerPass1.java  LinkerPass2.java
dataload/merge_configs/: dependency-reduced-pom.xml  pom.xml
dataload/merge_configs/src/main/java/uk/ac/ebi/merge_configs/: InputJson.java  MergeConfigs.java
dataload/nextflow/: local_nextflow.config  ols_dataload.nf  ols_embeddings.nf
dataload/ols-shared-rs/: Cargo.toml
dataload/ols-shared-rs/src/: defined_fields.rs  embeddings.rs  entity_definition.rs  entity_definition_set.rs  lib.rs  linker_pass1_result.rs  streaming.rs
dataload/ols_to_tsv/: Cargo.toml
dataload/predownloader/src/main/java/uk/ac/ebi/ols4/predownloader/: OntologyDownloaderThread.java
dataload/rdf2json/: dependency-reduced-pom.xml  pom.xml
dataload/rdf2json/src/main/java/uk/ac/ebi/rdf2json/: OntologyGraph.java  OntologyNode.java  OntologyStatusWriter.java  RDF2JSON.java  ValidateLanguage.java
dataload/rdf2json/src/main/java/uk/ac/ebi/rdf2json/annotators/: LabelAnnotator.java  RelatedAnnotator.java  ShortFormAnnotator.java  SynonymAnnotator.java
dataload/rdf2json/src/main/java/uk/ac/ebi/rdf2json/helpers/: AncestorsClosure.java
dataload/rdf2json/src/main/java/uk/ac/ebi/rdf2json/properties/: PropertySet.java  PropertyValue.java
dataload/rdf2json/src/main/java/uk/ac/ebi/rdf2json/reporting/: ContactInfo.java  OntologyLoadStatus.java  OntologyReportingService.java
dataload/reporting/: README.md  dependency-reduced-pom.xml  pom.xml
dataload/reporting/src/main/java/uk/ac/ebi/ols/reporting/: ContactInfo.java  OntologyLoadStatus.java  ReportingService.java
dataload/solr_config/ols4_entities/conf/: managed-schema.xml  solrconfig.xml
dataload/solr_config_builder/: dependency-reduced-pom.xml  pom.xml
dataload/solr_config_builder/src/main/java/: FindAllProperties.java  LinkerPass1Result.java  SolrConfigBuilder.java
dataload/solr_config_template/ols4_autocomplete/conf/: schema.xml  solrconfig.xml
dataload/solr_config_template/ols4_entities/conf/: schema.xml  solrconfig.xml
dev-testing/: README.md  create_datafiles.sh  dev-local.sh  load_test_into_neo4j.sh  start-solr.sh  teststack.sh
docs/: RUNNING_LOCALLY.md
ebi-search-file-generator/: QUICKSTART.md  json_to_xml.py
frontend/: .env  Dockerfile  dev_server.mjs  index.html.in  package-lock.json  package.json
k8chart-embed-service/: Chart.yaml  values.yaml
notebooks/: free_text_embedding_search.ipynb  hp_mp_similarity.ipynb
ols-shared/: pom.xml
testcases_expected_output_api/: ontologies.json
text_tagger/: Cargo.toml
(+3451 files in other folders)
