[package]
name = "ols_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = { version = "1.0.108", features=["preserve_order"] }
struson = "0.3.0"
flate2 = {version="1.0.28", features=["zlib-ng"]}
csv = "1.3.1"
hex = "0.4.3"
sha1 = "0.10.6"
openai_api_rust = "0.1.9"
tiktoken-rs = "0.4"
rusqlite = "0.32.1"

[patch.crates-io]
idna_adapter = { git = "https://github.com/hsivonen/idna_adapter", rev = "v1.1.0" }


