[package]
name = "ols_inject_hierarchy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = { version = "1.0.108", features=["preserve_order"] }
struson = "0.3.0"
flate2 = {version="1.0.28", features=["zlib-ng"]}
csv = "1.3.1"
hex = "0.4.3"
sha1 = "0.10.6"
rusqlite = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.10.0"
indicatif = "0.18.0"
crossbeam = "0.8.4"
