[package]
name = "ols_create_manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ols_create_manifest"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
struson.workspace = true
ols_shared.workspace = true
rayon.workspace = true
